@@ -1,3 +1,6 @@
+27 Sep 2011: Wouter
+	- for windows, get unbound-control config and path from registry.
+
 26 Sep 2011: Wouter
 	- tentative fix for windows loop bug: if wlanapi.dll does not load.
 
